# todo

./: README.md  todo.sln
todo/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  Database.cpp  Database.h  ListItem.cpp  ListItem.h  main.cpp  test.db  todo.vcxproj  todo.vcxproj.filters
todo/cmakeout/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CommandParser.cpp.vcxproj  CommandParser.cpp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp.vcxproj  main.cpp.vcxproj.filters  sqlite3.h.vcxproj  sqlite3.h.vcxproj.filters  todoList.sln  todoList.vcxproj  todoList.vcxproj.filters
